# telegram-notetaker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  compiler.py  db.py  deployment.md  design.md  docker-compose.yml  main.py  package-lock.json  package.json  person_cards.py  pyproject.toml  requirements.txt  scheduler.py  schema.sql  symptom.txt  tsconfig.json  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
app/: config.py  dependencies.py  main.py  middleware.py
app/models/: example.py
app/routers/: health.py
app/routers/v1/: example.py
app/services/: example.py
app/utils/: logging.py
examples/: requests.http
migrations/: 0003_compile_jobs.sql
scripts/: backfill-r2.mjs
src/: batch.ts  bot.ts  compiler.ts  db.ts  github.ts  globals.d.ts  index.ts  personCards.ts  types.ts  update_agent.ts
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_bot.py  test_compiler.py  test_db.py  test_example.py  test_person_cards.py  test_scheduler.py
